core/app/themes/suite8/css/layout/_recordview.scss
.record-view {
  padding-top: 7em;
  width: 100%;
  margin: 0;
}

.record-view-header {
  border-bottom: 0.03em solid transparent;
}

.record-view-hr {
  margin-top: 0;
  margin-bottom: 0;
}

.record-view-hr-container {
  font-size: 0.85em;
  padding-top: 0.6em;
  padding-left: 1.6em;
  padding-right: 1.6em;
}

@media all and (min-width: $breakpoint-large) {
  .record-view-hr-container {
    font-size: 0.85em;
    padding: 0.4em 1.6em;
  }
}

.record-view-title {
  color: $shell-grey;
  font-size: 1em;
  font-weight: 300;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  margin: 1em;
}

.record-view-name {
  color: $median-grey;
  font-size: 1.5em;
  margin-left: 1rem;
  word-wrap: break-word;
}

.record-view-actions {
  margin: 1em 0 0 0;
  text-align: end;
}

